.svn/pristine/1e/1e56c411bdec1ba03051d0763e24937397cfaf71.svn-base
System.register([], function (_export, _context) {
  "use strict";

  return {
    setters: [],
    execute: function () {
      // This module is auto-generated to report error emitted when try to load module file:///G:/Work/cocoscreator/MiniGame/assets/script/common/TweenManager.ts at runtime.
      throw new Error(`SyntaxError: C:\CocosDashboard_2.0.1\file:\G:\Work\cocoscreator\MiniGame\assets\script\common\TweenManager.ts: Unexpected token (166:41)

  164 |             }
  165 |             else{
> 166 |                 erropTips = "not found "..k.." in tween target."
      |                                          ^
  167 |             }
  168 |             // if this._target[k] then
  169 |             //     this.isTargetSelf = true`);
    }
  };
});
//# sourceMappingURL=03f5a640036c1a5fdb474a422eefed7539caf92e.js.map